fixed bug and introduced a new bug: text is behind the video

--- a/css/form_style.css
+++ b/css/form_style.css
@@ -2,6 +2,7 @@
 	background-color: white;
 	border-radius: 25px;
 	display:none;
+	z-index: 5;
 	height: 500px;
 	left: 50%;
 	padding: 50px;
