--- a/css/navBar.css
+++ b/css/navBar.css
@@ -2,11 +2,12 @@
 	background: white;
 	width: 100%;
 	margin: 0 auto;
-	max-height: 0;
+	max-height: 0px;
 	text-align: center;
 	top: 11%;
 	overflow: hidden;
 	position: relative;
+	z-index: 3;
 	transition: max-height 0.3s;
 }
 
