--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
 video.fillWidth {
   position: absolute;
   width: auto;
-  z-index: -1;
+  z-index: 0;
 }
 
 .video-container {
@@ -144,7 +144,7 @@ header h1 em {
   width: 100%;
   height: 80px;
   border-bottom: 1px solid #444;
-  z-index: 9999;
+  z-index: 3;
 }
 
 .head-left {
@@ -355,14 +355,14 @@ header h1 em {
 #disc-local img {
   display: block;
   margin: auto;
-  -webkit-transition-duration: 0.2s; /* Safari */
+  -webkit-transition-duration: 0.2s;  
   transition-duration: 0.2s;
 }
 
 /*Tansition on over*/
 #disc-local img:hover {
   transform: matrix(0.99756, -0.06975, 0.06975, 0.99756, 0, 0);
-  -webkit-transition-duration: 0.2s; /* Safari */
+  -webkit-transition-duration: 0.2s; 
   transition-duration: 0.2s;
 }
 
